working out main nav li issue
I can't line up li elements because of margins (?)

--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ p {
 	width: 600px;
 	background: #DBCBCB;
 	padding: 0;
+	margin 0;
 }
 
 #main_nav li {
